--- a/src/main/webapp/registroalquiler.xhtml
+++ b/src/main/webapp/registroalquiler.xhtml
@@ -15,52 +15,8 @@ and open the template in the editor.
 <h:head>
     <title> Servicio de Alquiler </title>
 </h:head>
+<p:body>
 
-<h:body>
-    <h:form id="Alquiler_Form">
-
-        <p:dataTable var="itrent" value="#{AlquilerItemsBean.getSelectedCliente().rentados}"
-                     paginator="true"
-                     paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
-                     rows="10">
-            <f:facet name="header">
-                Items Alquilados
-            </f:facet>
-            <p:column headerText="Item Rentado">
-                <h:outputText value="#{itrent.item.nombre}"/>
-            </p:column>
-
-            <p:column headerText="Multa">
-                <h:outputText value="#{AlquilerItemsBean.consultarMulta(itrent.item)}"/>
-            </p:column>
-
-
-        </p:dataTable>
-
-        <br/>
-        <p:outputLabel class="labelCenter" style="font-size: 25px"><strong>Alquilar Item</strong></p:outputLabel>
-
-        <h:panelGrid id="grid" cellpadding="5" columns="2" class="panelCenter" style="margin-bottom:10px">
-
-            <p:outputLabel value="ItemID"/>
-            <p:inputText id="itid" type="int" binding="#{itid}"/>
-
-            <p:outputLabel value="Dias"/>
-            <p:inputText id="ndias" type="int" binding="#{dias}"/>
-
-            <p:outputLabel value="Costo: "/>
-            <p:outputLabel value="#{AlquilerItemsBean.costo}"/>
-            <p:commandButton class="Button" value="Consular costo"
-                             action="#{AlquilerItemsBean.consultarCosto(itid.value,dias.value)}"
-                             update="Alquiler_Form"/>
-
-            <p:commandButton class="Button" value="Alquilar" action="registrocliente?faces-redirect = true">
-                <f:actionListener binding="#{AlquilerItemsBean.registrarAlquilerCliente(itid.value,dias.value)}"/>
-            </p:commandButton>
-
-        </h:panelGrid>
-    </h:form>
-</h:body>
-
+</p:body>
 
 </html>
